--- a/ADCB-Assessment-2025/notebooks/Agentic.ipynb
+++ b/ADCB-Assessment-2025/notebooks/Agentic.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "a90b8abd",
    "metadata": {},
    "outputs": [],
@@ -21,8 +21,8 @@
     "\n",
     "\n",
     "# Load reference doc\n",
-    "base_path = os.path.dirname(__file__)\n",
-    "ref_path = os.path.join(base_path, \"explanation_guide.txt\")\n",
+    "base_path = os.path.dirname(\".\")\n",
+    "ref_path = os.path.join(base_path, \"../docs/explanation_guide.txt\")\n",
     "\n",
     "\n",
     "def load_docs():\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0a95b244",
    "metadata": {},
    "outputs": [],
@@ -124,7 +124,48 @@
    "execution_count": null,
    "id": "e228416d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== MODEL OUTPUT ===\n",
+      "High Risk 0.92\n",
+      "\n",
+      "=== RETRIEVED CONTEXT ===\n",
+      "- Reasoning Patterns:\n",
+      "- Pattern A: High income + long history → low risk.\n",
+      "- Pattern B: High utilization + missed payments → high risk.\n",
+      "- Pattern C: Young age + short credit history → medium/high risk.\n",
+      "- Pattern D: Low utilization + no missed payments → low risk.\n",
+      "- General Risk Rules:\n",
+      "- Utilization above 70% significantly increases risk.\n",
+      "- More than 1 missed payment in last 12 months increases risk.\n",
+      "- A long clean credit history decreases risk.\n",
+      "- High income-to-debt ratio reduces risk.\n",
+      "- Younger customers with short histories may show more volatility.\n",
+      "- Feature Meanings:\n",
+      "- income: Monthly customer income. Higher income indicates more repayment capacity.\n",
+      "- utilization: Percentage of credit used relative to the limit.\n",
+      "- missed_payments: Count of missed or delayed payments.\n",
+      "- credit_history_length: Number of years since first credit account.\n",
+      "- age: Customer age in years.\n",
+      "- debt_to_income: Total debt divided by monthly income.\n",
+      "\n",
+      "=== FINAL EXPLANATION ===\n",
+      "[LLM Explanation Placeholder]\n",
+      "\n",
+      "    You are an AI banking risk analyst. Explain the model's decision.\n",
+      "\n",
+      "    Model Prediction: High Risk (risk score = 0.92)\n",
+      "\n",
+      "    Customer Features:\n",
+      "    - income: 4800\n",
+      "- utilization: 0.82\n",
+      "- missed_paym...\n"
+     ]
+    }
+   ],
    "source": [
     "# Example real row (replace with real dataset row)\n",
     "features = {\n",
@@ -137,6 +178,7 @@
     "}\n",
     "\n",
     "\n",
+    "# todo: replace with actual model's predictions\n",
     "prediction = 1\n",
     "risk_score = 0.92\n",
     "\n",
@@ -150,12 +192,20 @@
     "\n",
     "print(\"\\n=== RETRIEVED CONTEXT ===\")\n",
     "for c in result[\"retrieved_context\"]:\n",
-    "print(\"-\", c)\n",
+    "    print(\"-\", c)\n",
     "\n",
     "\n",
     "print(\"\\n=== FINAL EXPLANATION ===\")\n",
     "print(result[\"explanation\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71f8270b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -165,8 +215,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.2"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
